--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
                 <div class="row">
                     <div class="col-lg-6" style="text-align: left !important;">
 
-                        <h1>Curriculum Vitae</h1>
-                        <p>
-                            DAVID ROBERT JAN MOKKEN</p>
-    <p>
-    Prinseneiland 50 I 1013 LR Amsterdam | +31618828637 | davidmokken@hotmail.com
-    Date of birth: September 18th 1994, Amsterdam </p>
+                        <h1>Start</h1>
+
 
     </body>
 
