--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html lang="en">
     <head>
         <title>Final Project</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <script type="text/javascript" src="d3/d3.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+        <script type="text/javascript" src="scripts/d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="icon.png" type="images/gif" sizes="16x16">
 
@@ -19,7 +21,7 @@
 
                 <a class="navbar-brand" href="index.html">
                 </a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls"navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -34,12 +36,43 @@
     </header>
 
     <body class="color">
-            <!-- Page Content -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6" style="text-align: left !important;">
+        
+        <!-- Page Content -->
+        <div class="row">
+            <div class="col-lg-6" style="text-align: left !important;">
+                <h1>Start</h1>
+            </div>
+            <div class="col-lg-6">
+                    <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Select Year
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <button class="dropdown-item" type="button" id="2013">2013</button>
+                              <button class="dropdown-item" type="button" id="2014">2014</button>
+                              <button class="dropdown-item" type="button" id="2015">2015</button>
+                              <button class="dropdown-item" type="button" id="2016">2016</button>
+                              <button class="dropdown-item" type="button" id="2017">2017</button>
+                            </div>
+                          </div>   
+            </div>
+        </div>     
 
-                        <h1>Start</h1>
+        <div class="row">
+                <div class="col-lg-6">
+                        <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+                        <script src="/scripts/d3-tip.js"></script>
+                        <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js'></script>
+                        <script lang='babel' type='text/babel'></script>
+                        <div id="datamap">
+                            <script src="datamap.js"></script>
+                        </div>
+
+                </div>
+
+
+
+        </div>
 
 
     </body>
