--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                         <label class="mr-sm-2" for="dropdown">Choose Year</label>
                         <select class="custom-select mr-sm-2" id="dropdown">
                         <option value="2013" id="2013">2013</option>
-                        <option value="2014">2014</option>
-                        <option value="2015">2015</option>
-                        <option value="2016">2016</option>
+                        <option value="2014" id="2014">2014</option>
+                        <option value="2015" id="2015">2015</option>
+                        <option value="2016" id="2016">2016</option>
                         <option selected value="2017" id="2017">2017</option>
                         </select>
                     </div>
@@ -97,48 +97,33 @@
         </div>
 
         <div class="col-lg-6">
+            <div class="custom-control custom-radio custom-control-inline" id="selecter">
+                <input type="radio" id="total" name="radio" value="total" class="custom-control-input" checked>
+                <label class="custom-control-label" for="total">Total Amount</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline" id="selecter">
+                <input type="radio" id="relative" name="radio" value="relative" class="custom-control-input">
+                <label class="custom-control-label" for="relative">Relative Distribution</label>
+            </div>
             <div id="bar">
                     <script src="barchart.js"></script>
-
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-6">
+                <svg id="fillgauge" width="97%" height="200"></svg>
+                <div id="fillgauge"></div>
+
+                <script src="http://d3js.org/d3.v4.min.js" type="text/javascript"></script>
                 <script src="fillgauge.js" type="text/javascript"></script>
-                <svg id="fillgauge1" width="97%" height="200" onclick="gauge1.update(NewValue());"></svg>
-                <!-- <script src="http://d3js.org/d3.v4.min.js" type="text/javascript"></script> -->
-                
                 <script type="text/javascript">
-                    //d3.select("#fillgauge").call(d3.liquidfillgauge, 7.6);
-                    //setInterval(function() {
-                    //    d3.select("#fillgauge1").on("valueChanged")(Math.floor(Math.random() * 100));
-                    //}, 4000);
-                    var gauge1 = loadLiquidFillGauge("fillgauge1", 55);
-                    var config1 = liquidFillGaugeDefaultSettings();
-                    config1.circleColor = "#FF7777";
-                    config1.textColor = "#FF4444";
-                    config1.waveTextColor = "#FFAAAA";
-                    config1.waveColor = "#FFDDDD";
-                    config1.circleThickness = 0.2;
-                    config1.textVertPosition = 0.2;
-                    config1.waveAnimateTime = 1000;
-
-                    function NewValue(){
-                        if(Math.random() > .5){
-                            return Math.round(Math.random()*100);
-                        } else {
-                            return (Math.random()*100).toFixed(1);
-                        }
-                    }
-
-
+                    d3.select("#fillgauge").call(d3.liquidfillgauge, 7.6);
                 </script>
             
 
 
         </div>
-
 
     </div>
 
