--- a/layout.html
+++ b/layout.html
@@ -16,15 +16,15 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <script type="text/javascript" src="scripts/external_scripts/d3/d3.js"></script>
+        <script type="text/javascript" src="scripts/d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon" href="images/icon.png" type="images/gif" sizes="16x16">
+        <link rel="icon" href="icon.png" type="images/gif" sizes="16x16">
     </head>
 
     <header>
         <!--Navigation -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="index.html"><img src="images/david-mich.jpg" height="50"></a>
+            <a class="navbar-brand" href="index.html"><img src="david-mich.jpg" height="50"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="about.html">Case</a>
+                    <a class="nav-item nav-link" href="about.html">About Case</a>
                     <a class="nav-item nav-link" href="visualisations.html">Visualisations</a>
                 </div>
             </div>
@@ -42,41 +42,10 @@
     </header>
 
     <body>
-        <!-- Page Content -->
-        <div class="hero-image" style="background-image: url(/images/migranten.jpg)">
-            <div class="hero-text">
-                <h1 style="font-size:50px; color:white">Migrants in the Netherlands</h1>
-                <h3>David Mokken</h3>
-                <a class="btn btn-outline-light" href="about.html">Read Case</a>
-            </div>
-        </div>
-        <div class="ct" style="padding: 35px">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6" style="text-align: left !important">
-                        <h3>Minor Programming</h3>
-                        <p>Voor het eind project van de Minor programmeren aan de UvA hebben we een case moeten kiezen.
-                            Mijn case behandeld criminaliteit onder migranten.
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <img src="images/mprog.png" style="width: 75%; object-fit: cover; margin-top: 20px;">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
+        <main class="container-fluid p-5">
+                {% block main %}{% endblock %}
+            </main>
 
     </body>
-    
-    <footer class="py-5 bg-dark page-foot" style="color: white">
-        <div class="container">
-            <div class="text-center" style="font-size: 13px">
-                <p>David Robert Jan Mokken</p>
-                <p>Prinseneiland 50-I 1013 LR Amsterdam</p>
-                <p>+31618828637 | davidmokken@hotmail.com</p>
-                <p>Date of birth: September 18th 1994, Amsterdam</p>
-                <p>&copy; David Mokken</p>
-            </div>
-        </div>
-    </footer>
+
+</html> 
