--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <body>
+    <body style="font-family: goudy old style">
         <!-- Page Content -->
         <div class="hero-image" style="background-image: url(/images/geenvluchteling.jpg)">
             <div class="hero-text">
@@ -60,10 +60,21 @@
                     </div>
                     <div class="col-lg-6" style="text-align: left !important">
                         <h3>Criminality and Immigrants</h3>
-                        <p>Voor het eind project van de Minor programmeren aan de UvA hebben we een case moeten kiezen.
-                            Mijn case behandeld criminaliteit onder migranten.
+                        <p>In May 2019 State Secretaty of Safety Mark Harbers in combination with the police released a concerning asylum seekers and criminality.
+                            However, Harbers played with the numbers in the rapport. Serious crimes were worked away in the numbers
+                            The report had hidden the numbers of asylum seekers for suspected for serious crimes such as rape and murder under the heading 'other' 
+                            and were therefore not included in the top 10 crimes for which asylum seekers were suspected..
+                            This, of course, led to a lot of upproar in The Netherlands.
                             The article can be found
                             <a href="https://nos.nl/artikel/2284928-ophef-over-onduidelijke-misdaadcijfers-asielzoekers-harbers-geen-opzet.html">here</a>.
+                        <br>
+                        <br>
+                        We live in times where people are afraid, especially of people who are different or come from another place than ours. 
+                        This in combination with lack of knowledge of the actual numbers of crime, asylum seekers and migrants have lead to forgone 
+                        conclusions and fear/anger in many people towards "foreigners". 
+                        The goal of creating these visualisations is to better show people the numbers about immigrants and people with immigrant backgrounds and crimes.
+                        Hopefully, showing that immigrants do not always "commit crimes" and eventually change people's perceptions about migrants. We all might just get along after all.
+
                         </p>
                     </div>
 
