--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
     </header>
 
-    <body>
+    <body style="font-family: goudy old style">
         <!-- Page Content -->
         <div class="hero-image" style="background-image: url(/images/migranten.jpg)">
             <div class="hero-text">
@@ -55,8 +55,10 @@
                 <div class="row">
                     <div class="col-lg-6" style="text-align: left !important">
                         <h3>Minor Programming</h3>
-                        <p>Voor het eind project van de Minor programmeren aan de UvA hebben we een case moeten kiezen.
-                            Mijn case behandeld criminaliteit onder migranten.
+                        <p>This site is made as a submission for the final project at the minor Programming at the University of Amsterdam.
+                        For the final project we had to choose a case and creates visualisations using javascript and d3. 
+                        The case chosen for this project is the issue of immigrants in the Netherlands with a specific interest in immigrants and people from immigrants background 
+                        in relation to criminality.
                         </p>
                     </div>
                     <div class="col-lg-6">
