--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="about.html">Case</a>
                     <a class="nav-item nav-link" href="visualisations.html">Visualisations</a>
+                    <a class="nav-item nav-link" href="information.html">Information</a>
                 </div>
             </div>
         </nav>
@@ -78,7 +79,7 @@
                 <p>Prinseneiland 50-I 1013 LR Amsterdam</p>
                 <p>+31618828637 | davidmokken@hotmail.com</p>
                 <p>Date of birth: September 18th 1994, Amsterdam</p>
-                <p>&copy; David Mokken</p>
+                <p>&copy; davidmokken</p>
             </div>
         </div>
     </footer>
