--- a/visualisations.html
+++ b/visualisations.html
@@ -37,6 +37,7 @@
                     <a class="nav-item nav-link" href="index.html">Home</a>
                     <a class="nav-item nav-link" href="about.html">Case</a>
                     <a class="nav-item nav-link active" href="visualisations.html">Visualisations<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="information.html">Information</a>
                 </div>
             </div>
         </nav>
@@ -170,7 +171,7 @@
             <p>Prinseneiland 50-I 1013 LR Amsterdam</p>
             <p>+31618828637 | davidmokken@hotmail.com</p>
             <p>Date of birth: September 18th 1994, Amsterdam</p>
-            <p>&copy; David Mokken</p>
+            <p>&copy; davidmokken</p>
         </div>
     </div>
 </footer>
