--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <script type="text/javascript" src="scripts/d3/d3.js"></script>
+        <script type="text/javascript" src="scripts/external_scrips/d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="images/icon.png" type="images/gif" sizes="16x16">
     </head>
@@ -34,6 +34,7 @@
                     <a class="nav-item nav-link" href="index.html">Home</a>
                     <a class="nav-item nav-link active" href="about.html">Case<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="visualisations.html">Visualisations</a>
+                    <a class="nav-item nav-link" href="information.html">Information</a>
                 </div>
             </div>
         </nav>
@@ -92,7 +93,7 @@
                 <p>Prinseneiland 50-I 1013 LR Amsterdam</p>
                 <p>+31618828637 | davidmokken@hotmail.com</p>
                 <p>Date of birth: September 18th 1994, Amsterdam</p>
-                <p>&copy; David Mokken</p>
+                <p>&copy; davidmokken</p>
             </div>
         </div>
     </footer>
