--- a/information.html
+++ b/information.html
@@ -72,6 +72,9 @@
                             <br>
                             Once clicked on a province the barchart, linechart and fillgauges change.
                             <br>
+                            Label/Title: The title shows the province (or Nederland) which data is currently shown in the visualisations.
+                            It changes along with the other visualisations when a province is clicked.
+                            <br>
                             Dataset that was used can be found
                             <a href="https://opendata.cbs.nl/statline/#/CBS/nl/dataset/70072ned/table?ts=1558635886803">here.</a>
                         </p>
@@ -86,16 +89,17 @@
                             <br>
                             Radio button: Changes the barchart to a total amount or to relative distribution.
                             <br>
-                            Total Amount: Western shows amount of people with Western immigrant descent.
+                            Total Amount: Western shows amount of people with Western immigrant descent. The rest speaks for itself.
                             <br>
-                            The rest speaks for itself
+                            The Netherlands button: Once pressed on the Netherlands button. The barchart, linechart and fillgauges change to show the data for the Netherlands as a whole.
                             <br>
-                            Color scale: The higher the amount, the lighter the red.
+                            Hoover function: The hoover function shows the precise amount or percentage shown in the barchart.
+                            <br>
+                            Color scale: The higher the amount, the lighter the color red is.
                             <br>
                             Dataset that was used can be found 
                             <a href="https://opendata.cbs.nl/statline/#/CBS/nl/dataset/70072ned/table?ts=1558635886803">here.</a>
                             </p>
-                        
                         </div>
                                      
                     <div class="col-lg-6" style="margin-top: 20px">
@@ -117,7 +121,7 @@
                     <div class="col-lg-6" style="text-align: left !important">
                         <h3>Fillgauges that show data concerning safety feeling</h3>
                         <p>
-                            Main Function: Several percentages and a grade concerning safety feeling.
+                            Main Function: Shows relevent information as simple numbers and percentages in regards to data concerning safety feeling.
                             <br>
                             All Fillgauges react to the dropdown and click function in the map.
                             <br>
