--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <script type="text/javascript" src="scripts/external_scrips/d3/d3.js"></script>
+        <script type="text/javascript" src="scripts/external_scripts/d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="images/icon.png" type="images/gif" sizes="16x16">
     </head>
@@ -74,7 +74,8 @@
                         This in combination with lack of knowledge of the actual numbers of crime, asylum seekers and migrants have lead to forgone 
                         conclusions and fear/anger in many people towards "foreigners". 
                         The goal of creating these visualisations is to better show people the numbers about immigrants and people with immigrant backgrounds and crimes.
-                        Hopefully, showing that immigrants do not always "commit crimes" and eventually change people's perceptions about migrants. We all might just get along after all.
+                        Hopefully, showing that immigrants do not always "commit crimes" and eventually change people's perceptions about migrants. But that's for yourselves to judge.
+                        We all might just get along after all.
 
                         </p>
                     </div>
