--- a/information.html
+++ b/information.html
@@ -89,7 +89,9 @@
                             <br>
                             Radio button: Changes the barchart to a total amount or to relative distribution.
                             <br>
-                            Total Amount: Western shows amount of people with Western immigrant descent. The rest speaks for itself.
+                            Total Amount: Western shows amount of people with Western immigrant descent. The rest of the bars are the other different backgrounds.
+                            <br>
+                            Relative: Shows Dutch background vs total migration background. Furthermore, it shows out of which the total migration background exists.
                             <br>
                             The Netherlands button: Once pressed on the Netherlands button. The barchart, linechart and fillgauges change to show the data for the Netherlands as a whole.
                             <br>
