--- a/information.html
+++ b/information.html
@@ -144,7 +144,7 @@
                 
                 <div class="row">
                     <div class="col-lg-6" style="text-align: left !important">
-                        <h3>Registered Amount of Crimes over 5 years</h3>
+                        <h3>Bar Chart that show registered Amount of Crimes over 5 years</h3>
                         <p>
                             Main Function: Shows amount of registered crimes over 5 years in a province.
                             <br>
