--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <body style="font-family: goudy old style">
         <!-- Page Content -->
-        <div class="hero-image" style="background-image: url(/images/migranten.jpg)">
+        <div class="hero-image" style="background-image: url(images/migranten.jpg)">
             <div class="hero-text">
                 <h1 style="font-size:50px; color:white">Migrants in the Netherlands</h1>
                 <h3>David Mokken</h3>
