--- a/visualisations.html
+++ b/visualisations.html
@@ -47,7 +47,7 @@
 
 <body style="font-family: goudy old style">
     <!-- Page Content -->
-    <div class="hero-image" style="background-image: url(/images/misdaadcijfers.png)">
+    <div class="hero-image" style="background-image: url(images/misdaadcijfers.png)">
         <div class="hero-text">
             <h1 style="font-size:50px; color:white">Visualisations</h1>
         </div>
