--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
     <body style="font-family: goudy old style">
         <!-- Page Content -->
-        <div class="hero-image" style="background-image: url(images/geenvluchteling.jpg)">
+        <div class="hero-image" style="background-image: url(/images/geenvluchteling.jpg)">
             <div class="hero-text">
                 <h1 style="font-size:50px; color:white">Case Description</h1>
                 <a class="btn btn-outline-light" href="visualisations.html">Visualisations</a>
