--- a/visualisations.html
+++ b/visualisations.html
@@ -109,7 +109,7 @@
                         <div class="row">
 
                         <!-- fillgauge1 -->
-                        <script src="http://d3js.org/d3.v4.min.js" type="text/javascript"></script>
+                        <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
                         <div class="col">
                             <label for="fillgauge" style="font-size: 20px; color: black" id="fg1">Grade for safety in neighbourhood</label>
                             <svg id="fillgauge" width="100%"></svg>
