--- a/visualisations.html
+++ b/visualisations.html
@@ -16,10 +16,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="/scripts/external_scripts/d3/d3.js"></script>
-    <script src="/scripts/external_scripts/d3-tip.js"></script>
+    <!-- <script type="text/javascript" src="/scripts/external_scripts/d3/d3.js"></script> -->
+    <!-- <script src="/scripts/external_scripts/d3-tip.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="images/icon.png" type="images/gif" sizes="16x16">
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </head>
 
